Add instruction for unknown birth time

--- a/natal_form.html
+++ b/natal_form.html
@@ -46,6 +46,7 @@
         </div>
         <div class="form-group">
             <label for="birthtime">Time of Birth:</label>
+            <p style="font-size: smaller; margin-top: -10px;">(თუ დრო არ გახსოვთ, მიუთითეთ 12:00)</p>
             <input type="time" id="birthtime" name="birthtime" required>
         </div>
         <div class="form-group">
